--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+    font-family: 'Roboto mono', sans-serif;
 }
 
 a {
@@ -90,4 +91,17 @@ nav .profile-link a{
     letter-spacing: 10px;
     color: white;
     text-align: center;
+}
+
+.home-main-button{
+    width: 100px;
+    height: 50px;
+    background: #47cfac;
+    display: grid;
+    align-items: center;
+}
+
+.home-main-button a{
+    font-weight: 700;
+    font-size: 18px;
 }
