--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,14 @@ a {
     color: black;
 }
 
+.home-body{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;   
+}
+
 header{
     width: 100%;
     height: 140px;
@@ -126,7 +134,7 @@ nav .profile-link a{
 }
 
 .blogs-news-img-container img {
-
+    width: 85%;
 }
 
 .blogs-news-info-container {
@@ -134,5 +142,14 @@ nav .profile-link a{
 }
 
 .blogs-news-info-container p {
-    
+    margin-bottom: 35px;
+}
+.blogs-posts-container {
+    padding: 0 50px 40px;
+}
+
+.blogs-posts-container h3{
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+    text-align: center;
 }
