--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ footer p {
     padding-bottom: 20px;
 }
 
-.blogpost-main-container section h1{
+.blogpost-main-container article h1{
     font-size: 35px;
 
 }
